--- a/webapp/Web.config
+++ b/webapp/Web.config
@@ -29,6 +29,7 @@
     <add name="eSPPContext" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=eSPPContext-20180206121158; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|eSPPContext-20180206121158.mdf" providerName="System.Data.SqlClient" />
     <!--<add name="Entities" connectionString="metadata=res://*/Models.ProcedureModels.csdl|res://*/Models.ProcedureModels.ssdl|res://*/Models.ProcedureModels.msl;provider=Oracle.ManagedDataAccess.Client;provider connection string=&quot;DATA SOURCE=192.168.1.101:1521/orcl;PASSWORD=Pa$$w0rd;USER ID=SPP&quot;" providerName="System.Data.EntityClient" />-->
     <add name="Entities" connectionString="metadata=res://*/Models.ProcedureModels.csdl|res://*/Models.ProcedureModels.ssdl|res://*/Models.ProcedureModels.msl;provider=Oracle.ManagedDataAccess.Client;provider connection string=&quot;DATA SOURCE=ibsb.dlinkddns.com/orcl;PASSWORD=Pa$$w0rd;USER ID=SPP&quot;" providerName="System.Data.EntityClient" />
+    <add name="SPGEntities2" connectionString="metadata=res://*/Models.SPGProcedures.csdl|res://*/Models.SPGProcedures.ssdl|res://*/Models.SPGProcedures.msl;provider=Oracle.ManagedDataAccess.Client;provider connection string=&quot;DATA SOURCE=ibsb.dlinkddns.com/orcl;PASSWORD=Pa$$w0rd;USER ID=SPP&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
