confirm for muktamad
confirm for muktamad
add parameters so that it autoload
added jqueryconfirm

--- a/webapp/eSPP.csproj
+++ b/webapp/eSPP.csproj
@@ -365,6 +365,7 @@
     <Content Include="Content\ajax\notify\notifications.html" />
     <Content Include="Content\ajax\notify\tasks.html" />
     <Content Include="Content\ajax\website-template.html" />
+    <Content Include="Content\css\jquery-confirm.min.css" />
     <Content Include="Content\css\login.css" />
     <Content Include="Content\css\animate.css" />
     <Content Include="Content\css\bootstrap.min.css" />
@@ -725,6 +726,7 @@
     <None Include="Scripts\jquery-1.4.4-vsdoc.js" />
     <Content Include="Scripts\jquery-1.4.4.js" />
     <Content Include="Scripts\jquery-1.4.4.min.js" />
+    <Content Include="Scripts\jquery-confirm\jquery-confirm.min.js" />
     <Content Include="Scripts\jquery.ui.core.js" />
     <Content Include="Scripts\jquery.ui.core.min.js" />
     <Content Include="Scripts\libs\jquery-2.1.1.min.js" />
